<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hector_xacro_tools</name>
  <version>0.6.0</version>
  <description>hector_xacro_tools</description>
  <maintainer email="marekdaniv@googlemail.com">marek</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/hector_xacro_tools</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
  <exec_depend>xacro</exec_depend>
  
</package>
